# nadeem

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  docker-compose.prod.yml  docker-compose.yml  partitions.csv  prd_back_front.md  start.sh
backend/: .env.example  .gitignore  Dockerfile  README.md  backend.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  tasks.md
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_date_joined_user_groups_user_is_active_and_more.py
backend/accounts/tests/: test_admin.py  test_auth.py  test_models.py
backend/chat/: admin.py  auth.py  consumers.py  gemini_client.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_prochatsession_flag_reason_prochatsession_flagged.py
backend/chat/tests/: test_admin.py  test_consumer.py  test_gemini_client.py  test_models.py  test_web_api.py  test_ws_auth.py
backend/devices/: admin.py  auth.py  models.py  serializers.py  tokens.py  urls.py  views.py
backend/devices/migrations/: 0001_initial.py  0002_device_release_group.py
backend/firmware/: admin.py  apps.py  models.py  urls.py  views.py
backend/nadeem/: admin_site.py  asgi.py  dashboard.py  settings.py  storage.py  test_settings.py  urls.py  wsgi.py
backend/semsems/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/stats/: admin.py  models.py  serializers.py  urls.py  views.py
docs/: INDEX.md  mobile.md  (+1 more)
main/: CMakeLists.txt  idf_component.yml  main.c
(+269 files in other folders)
